assets/css/style.css
html {
    overflow: -moz-scrollbars-vertical; 
    overflow-y: scroll;
}

.center {
    text-align: center;
}

.navbar {
    position: static;
}

.navbar .brand {
    color: #fff;
}

@media (min-width: 979px) {
    body {
        padding-top: 60px;
        padding-bottom: 40px;
    }

    .navbar {
        position: fixed;
    }
}

#bio .span2 {
    margin: 0 0 19px 0;
}

@media (max-width: 767px) {
    #bio .span2 {
        text-align: center;
    }
}

#bio .span4 {
    margin-bottom: 19px;
}

.twitter-follow-button {
    margin: 9px 0 0 10px;
}

.avatar {
    display: block;
    width:96px;
    margin: 0 0 0 0; 
}

@media (max-width: 767px) {
    .avatar {
        margin: 0 auto 0 auto; 
    }
}

.resize {
    position: fixed;
    bottom: 0;
    right: 0;
    height: 80px;
    width: 80px;
    background: url(../img/resize.png);
}

.ua-ie-6 .resize, 
.ua-ie-7 .resize, 
.ua-ie-8 .resize {
    display: none;
}

#footer {
    text-align: center;
}

